--- a/package.json
+++ b/package.json
@@ -16,9 +16,10 @@
   },
   "devDependencies": {
     "cheerio": "^1.0.0",
-    "express": "^4.19.2",
+    "chokidar": "^4.0.3",
     "cors": "^2.8.5",
     "cssnano": "^7.0.6",
+    "express": "^4.19.2",
     "http": "^0.0.1-security",
     "vite": "^6.1.1",
     "ws": "^8.17.1"
